# -SSISM_DISSEMINATION_ENGINE_V1

./: ADVANCE_VOTE_SHAM_20251205.md  AI_Boyfriend_Grooming_Crisis_2025_V2.1_Emergency_Report.md  Commit: 9ac0f892eeca889fc7e17b9dfbb015121e1ebbc8  DAILY_INTELLIGENCE_REPORT_20251205.md  DAILY_INTELLIGENCE_REPORT_20251205_Academic.md  DECODING_THE_MILITARY_SCAMS_20251205.md  DUKKHA_IS_COMING_20251205.md  ENGINE_CONFIG_LANG_BORDER_FEEDS.sh  Governance_Log.md  IR-2025-12-08-YeBilu-Assault.md  IR-2025-12-09-Rakhine-Frontline-Grinder.md  IR-2025-12-10-Australia-Scam-Nexus-Briefs.md  IR-2025-12-10-Australia-Scam-Nexus.md  IR-2025-12-10-Morning-Coffee-Briefing-Myanmar-2025-Election.md  IR-2025-12-10-Rakhine-Frontline-Inflection.md  IR-2025-12-10-Youth-Revolution-Echo-Briefing.md  IR-2025-12-11-Whatever.md  JAKARTA_SHADOW_WORKSHOP_20251206.md  Jakarta Shadow Works A Diplomatic Comedy.md  LIVE_BRIEFING.md  M15_Gas_Report_Burmese.md  M15_Gas_Report_English.md  MAH_AI_Satire_Editorial_2025-12-07.md  MAH_AI_Truth_Compilation_2025-12-07.md  MILITARY_SCAMMERS_DOSSIER_20251205.md  Metta_Mythos_2025-12-08.md  README.md  Revised V_ENGINE_FULL_DEPLOYMENT.sh  SHA-256:  Commit:  Verified By: SSISM Integrity Engine V1  SSISM ONE-TOUCH ARCHIVE SCRIPT  SSISM_Distributed_Vigilance_Engine_V1.md  SSISM_INGESTION_NOTE_V1.md  SSISM_INTEGRITY_FRAMEWORK_V1.md  SSISM_Integrity_Block_Template_v1.0_2025-12-08.md  SSISM_Integrity_Registry_2025.md  SSISM_L6_OVERRIDE.sh  SSISM_Morning_Brief_AutoTemplate_V1.md  SSISM_Report_2025-12-09.md  SSISM_Report_2025-12-10.md  (+31 more)
broadcast/: latest_telegram.txt
(+86 files in other folders)
