# pyproject.toml

# --- 1. BUILD SYSTEM CONFIGURATION (PEP 517/518) ---
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# --- 2. PROJECT METADATA (PEP 621) ---
[project]
# IMPORTANT: This name is used for the package on PyPI.
name = "ssism-dissemination-engine" 
version = "0.0.1"
description = "SSISM Dissemination Engine: OSINT-driven counter-narrative and data analysis tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    {name = "UIngarsoe", email = "your-email@example.com"},
]
keywords = [
    "OSINT", 
    "Myanmar", 
    "Burma", 
    "AI", 
    "Truth-Dissemination"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

# --- 3. DYNAMIC PACKAGE DISCOVERY ---
# This section tells setuptools to automatically find your SSISM package directory.
[tool.setuptools.packages.find]
# If you place your Python source code in a folder named 'ssism_engine' (recommended), 
# you should update this line: 
# where = ["src"] 
